# Chatroom

./: README.md  app.py  chat.db  client.py  db.py  main.py  pyproject.toml  test_chat.py
ui/: global.css  index.html  page.html  script.js
uploads/compressed_audio/: y2mate.com - Ed Sheeran  Perfect_1776749579232.m4a
