[project]
name = "chatroom"
version = "0.1.0"
description = "A simple terminal-based chat application in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "numpy>=2.4.4",
    "websockets>=16.0",
]
